fix(attachment): attachment content overlapping

--- a/apps/client/src/widgets/type_widgets/Attachment.css
+++ b/apps/client/src/widgets/type_widgets/Attachment.css
@@ -50,6 +50,7 @@
 
 .attachment-detail-wrapper.list-view .attachment-content-wrapper {
     max-height: 300px;
+    overflow: auto;
 }
 
 .attachment-detail-wrapper.full-detail {
